# PartsBasedDetector

./: CMakeLists.txt
detectorService/: CMakeLists.txt  DPMDetectionI.cpp  DPMDetectionI.h
include/: PartsBasedDetector.hpp  stdint.h
src/: CMakeLists.txt  DetectorDirectory.cpp  DynamicProgram.cpp  HOGFeatures.cpp  PartsBasedDetector.cpp  SearchSpacePruning.cpp  SpatialConvolutionEngine.cpp  Visualize.cpp  demo.cpp
